# SmartCompress

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/skcodestack/compress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/skcodestack/compress/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
imageselect/: build.gradle
imageselect/src/main/: AndroidManifest.xml
imageselect/src/main/res/layout/: activity_image_select.xml  activity_perview_image_layout.xml  item_perview_layout.xml  media_chooser_item.xml
imageselect/src/main/res/values/: dimes.xml  styles.xml
imageselect/src/main/res/xml/: file_paths.xml
smartcompress/: .gitignore  CMakeLists.txt  bintrayUpload.gradle  build.gradle
smartcompress/src/androidTest/java/com/skcodestack/scompress/: ExampleInstrumentedTest.java
smartcompress/src/main/: AndroidManifest.xml
smartcompress/src/main/cpp/: compressImage.cpp
smartcompress/src/main/cpp/include/: bmp.h
smartcompress/src/main/java/com/skcodestack/scompress/: SmartCompress.java
smartcompress/src/main/java/com/skcodestack/scompress/core/: ErrorCode.java  QualityLevel.java  ResultMode.java
smartcompress/src/main/java/com/skcodestack/scompress/inter/: OnCompressListener.java  OnDefaultCompressListener.java  OnProgressListener.java
smartcompress/src/main/java/com/skcodestack/scompress/util/: CompressUtil.java  FileUtil.java  ThreadPool.java
smartcompress/src/main/res/values/: strings.xml
smartcompress/src/test/java/com/skcodestack/scompress/: ExampleUnitTest.java
(+25 files in other folders)
